--- a/support.html
+++ b/support.html
@@ -197,7 +197,7 @@
                 </div>
             </div>
             
-            <div class="impact-tracker">
+            <!--<div class="impact-tracker">
                 <h2>Our Impact So Far</h2>
                 <div class="impact-stats">
                     <div class="stat">
@@ -213,7 +213,7 @@
                         <div class="stat-label">Wildlife Conservation</div>
                     </div>
                 </div>
-            </div>
+            </div>-->
         </div>
     </section>
 
